--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  flame: 1.6.0
+  cupertino_icons: 
+  flame: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
